<resources>
    <string name="app_name">PETS App</string>

    <string name="species_default">Enter Species</string>
    <string name="species_dog">dog</string>
    <string name="species_cat">cat</string>
    <string name="species_fish">fish</string>
    <string name="species_bird">bird</string>
    <string name="species_reptile">reptile</string>
    <string name="species_rodent">rodent</string>
    <string name="species_arachnid">arachnid</string>

    <string name="sex_default">Select Sex</string>
    <string name="sex_female">female</string>
    <string name="sex_male">male</string>

    <string name="wt_kg">kg</string>
    <string name="wt_pounds">lbs</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="label_settings">Settings</string>
    <string name="label_chat">Chat</string>
    <string name="label_calendar">Calendar</string>
    <string name="label_home">Hello, </string>
    <string name="label_petp">Pet Profile</string>
    <string name="label_person"></string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_user">user</string>
    <string name="login_confirm">Login</string>
    <string name="login_unknown">Forgot Your Password</string>

    <string name="calendar_year">Year</string>
    <string name="calendar_month">Month</string>
    <string name="calendar_day">Day</string>
    <string name="calendar_hour">Hour</string>

    <string name="default_month">Month Year</string>
    <string name="calendar_mon">Mon</string>
    <string name="calendar_tue">Tue</string>
    <string name="calendar_wed">Wed</string>
    <string name="calendar_rsa">Thur</string>
    <string name="calendar_fri">Fri</string>
    <string name="calendar_sat">Sat</string>
    <string name="calendar_sun">Sun</string>



</resources>